# taskboard-mcp

./: .gga  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start-mcp.sh  watchdog.sh
.atl/: skill-registry.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: guia-deployment.md  guia-desarrollo.md  guia-web.md  investigacion-engram-cloud.md  mcp-tools.md  release-procedure.md
docs/sdd-phases/: seguimiento-sdd-v2.md  seguimiento-sdd.md  tasks-breakdown.md  web-fixes-v2.md
taskboard/: mcp_server.py  store.py
taskboard/web/: app.py
taskboard/web/routes/: actions.py  api.py  pages.py  partials.py
taskboard/web/static/css/: style.css
taskboard/web/templates/: base.html  dashboard.html  project_detail.html  project_list.html  reports.html  task_detail.html  task_edit.html  timeline.html
taskboard/web/templates/partials/: metrics_cards.html  project_cards.html  recent_activity.html  task_history.html  task_list.html  task_row.html  timeline_group.html
tests/: conftest.py  test_api_routes.py  test_mcp_server.py  test_store.py  test_web_routes.py
